--- a/src/styles/inject.scss
+++ b/src/styles/inject.scss
@@ -14,6 +14,7 @@
     bottom: 0 !important;
     width: 100vw !important;
     height: 100vh !important;
+    transform: none !important; // Fix for Hulu
   }
 
   &-active &-upscale {
