--- a/src/pug/partials/header.pug
+++ b/src/pug/partials/header.pug
@@ -5,7 +5,7 @@ header.uwv-head
       target='_blank'
     )
       img.logo-icon(
-        src=require('images/uwv-icon.svg')
+        src=require('images/uwv-icon.svg').default
         alt=manifest.name
         draggable="false"
       )
