--- a/src/welcome.pug
+++ b/src/welcome.pug
@@ -25,6 +25,7 @@ block content
           img.browser-list-image(
             src=browser.icon
             alt=`${browser.name} Extension`
+            draggable="false"
           )
 
 
