--- a/src/styles/inject.scss
+++ b/src/styles/inject.scss
@@ -1,20 +1,27 @@
 .uwv {
   &-active {
-    // Specific for DailyMotion
+    // Fix for Dailymotion
     .dmp_VideoView-content {
       all: unset !important;
     }
+
+    // Fix for Disney+
+    .hudson-container {
+      all: unset !important;
+      width: 100vw !important;  // Required for "normal" mode restoration
+      height: 100vh !important; // Required for "normal" mode restoration
+    }
   }
 
-  &-active &-video {
+  &-active &-video:not(&-normal) {
     position: absolute !important;
     top: 0 !important;
     right: 0 !important;
     left: 0 !important;
     bottom: 0 !important;
+    transform: none !important; // Fix for Hulu
     width: 100vw !important;
     height: 100vh !important;
-    transform: none !important; // Fix for Hulu
   }
 
   &-active &-upscale {
