Revert Normal mode functionality

--- a/src/styles/inject.scss
+++ b/src/styles/inject.scss
@@ -13,7 +13,7 @@
     }
   }
 
-  &-active &-video:not(&-normal) {
+  &-active &-video { // :not(&-normal)
     position: absolute !important;
     top: 0 !important;
     right: 0 !important;
