--- a/src/popup.pug
+++ b/src/popup.pug
@@ -2,7 +2,7 @@ extends pug/partials/layout
 
 block append config
   - var title = 'Settings'
-  - var font = 'Roboto+Condensed:400,700|Roboto:400,700'
+  - var font = 'Roboto+Condensed:700|Roboto:400,700|Roboto+Mono:400'
 
 include pug/mixins/input.pug
 include pug/mixins/option.pug
@@ -12,12 +12,13 @@ block append styles
 
 block content
   each category in data.categories
-    .category(class=`for-${category.toLowerCase()}`)
-      .category-head=category
+    .category(class=`for-${category.title.toLowerCase()}`)
+      .category-head=category.title
+        span.category-tooltip(data-tooltip=category.tooltip) &#8505;
 
       .category-body
         each option in data.options
-          if option.category === category.toLowerCase()
+          if option.category === category.title.toLowerCase()
             if option.category !== 'shortcuts'
               +option(option)
             else
