--- a/src/styles/app/_variables.scss
+++ b/src/styles/app/_variables.scss
@@ -4,7 +4,7 @@
   --base-line-height: 1.5;
   --base-radius: 4px;
   --base-spacing: 1rem;
-  
+
   --spacing-xl: 4rem;
   --spacing-l: 2.5rem;
   --spacing-s: 0.4rem;
@@ -17,12 +17,12 @@
   --color-dark: 233, 7%, 54%;
   --color-white: 0, 100%, 100%;
   --color-black: 0, 0%, 0%;
-  
+
   --font-size-xl: calc(var(--base-font-size) * 2);
   --font-size-l: calc(var(--base-font-size) * 1.4);
   --font-size-s: calc(var(--base-font-size) / 1.2);
   --font-size-xs: calc(var(--base-font-size) / 1.4);
 
-  --font-family-sans-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-family-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-family-sans-serif: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-mono: "Roboto Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
