--- a/src/welcome.pug
+++ b/src/welcome.pug
@@ -91,3 +91,19 @@ block content
 
         li.list-item Configurable shortcuts. 
           span Set the desired keystroke, with min/max of 3 keys to control pause or mode toggling.
+
+  section.category
+    .category-head
+      h3#options 
+        a(href='#Defaults') #
+        |  Defaults
+
+    .category-body
+      p As mentioned, you can configure shortcuts to a key combination you prefer. However, after initial installation, it comes with sensible defaults.
+
+      ul.list
+        li.list-item Pause the extension.
+          <p><kbd>Control</kbd> <kbd>Shift</kbd> <kbd>0</kbd></p>
+
+        li.list-item Toggle between modes.
+          <p><kbd>Control</kbd> <kbd>Shift</kbd> <kbd>9</kbd></p>
