--- a/src/welcome.pug
+++ b/src/welcome.pug
@@ -103,7 +103,7 @@ block content
 
       ul.list
         li.list-item Pause the extension.
-          <p><kbd>Control</kbd> <kbd>Shift</kbd> <kbd>0</kbd></p>
+          <p><kbd>Control</kbd> <kbd>Shift</kbd> <kbd>X</kbd></p>
 
         li.list-item Toggle between modes.
-          <p><kbd>Control</kbd> <kbd>Shift</kbd> <kbd>9</kbd></p>
+          <p><kbd>Control</kbd> <kbd>Shift</kbd> <kbd>Z</kbd></p>
