--- a/src/styles/app/_reset.scss
+++ b/src/styles/app/_reset.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 /**
  * normalize.css
  * Taken needed bits from "normalize.css" and extended what was missing.
@@ -75,7 +77,7 @@ button:-moz-focusring,
     margin-top: 0;
     margin-bottom: 1.2rem;
     font-weight: 700;
-    font-size: unquote(if($index == 1, 3.2, #{3.2 / ($index / 1.5)}) + 'rem');
+    font-size: unquote(if($index == 1, 3.2, #{math.div(3.2, math.div($index, 1.5))}) + 'rem');
     color: hsla(var(--color-primary));
   }
 }
