--- a/src/styles/inject.scss
+++ b/src/styles/inject.scss
@@ -34,7 +34,7 @@
   }
 
   &-active &-normal {
-    object-fit: none !important;
+    object-fit: contain !important;
   }
 
   &-active &-upscale {
