update dependencies and resolves #77

--- a/src/pug/partials/layout.pug
+++ b/src/pug/partials/layout.pug
@@ -1,6 +1,6 @@
 block config
-  - const manifest = require('./manifest')
-  - const data = require('./pug/data')
+  - const manifest = require('../../manifest')
+  - const data = require('../data')
 
 doctype html
 html(lang='en')
